--- a/css/home_style.css
+++ b/css/home_style.css
@@ -53,7 +53,8 @@ p {font-size: 15px;}
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     text-align: center;
-    font-size: 15px;
+    font-size: 17px;
+    font-weight: bold;
     line-height: 2.0;
 }
 #pageHead .globalNavi ul li:first-child{
